--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Families#index</h1>
-<p>Find me in app/views/families/index.html.erb</p>
+<h1>Families</h1>
+<% if !@families.empty? %>
+  <% @families.each do |family| %>
+    <h3><%= family.family_name %></h3>
+  <% end %>
+<% else %>
+  <%= render "layouts/family_form", { family: @family } %>
+<% end %>
