--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,2 +1,2 @@
 <h1>Families#show</h1>
-<p>Find me in app/views/families/show.html.erb</p>
+<h3>Your family name is <%= current_user_family(current_user).family_name %></h3>
