--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,2 +1,8 @@
 <h1>Families#show</h1>
 <h3>Your family name is <%= current_user_family(current_user).family_name %></h3>
+<h2>Family members: </h2>
+<ol>
+  <% @users.each do |user| %>
+  <li><%= user.name %> <%= user.is_owner_of_family ? "Owner" : "" %></li>
+  <% end %>
+</ol>
